Corregimos error de boton en mal funcionamiento

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1174,7 +1174,7 @@ footer img{
     .cartaCafeFrutal{
         display: none;
     }
-    .cartaCafeFrutalHamburguesa, #adminButtonHamburguesa, #logOutButtonHamburguesa{
+    .cartaCafeFrutalHamburguesa, .adminButton, .logOutButton{
         display: block;
     }
 }
